- Removed unused functions from release builds.
- Re-enabled exception handlings for the std library.

ver 0.7.1
- Added support for C-style comments and trailing commas in JSON files.
- Added support for .jsonc files.
- Added "codepage" option to support UTF-8 outputs on Windows.
- Added support for colorized outputs on Linux.
- Fixed a bug that there is no limit on the buffer size of the console window on Linux.
- Optimized some functions to reduce the binary size.

ver 0.7.0
- Added options for string validation.
- Added support for colorized output on Windows.
- Added an option to skip success dialog.
- Prohibited URLs that have linefeeds.

ver 0.6.5
- Added support for Solaris/illumos.
- Added support for MinGW-w64.
- Fixed a bug that Windows was not able to handle long paths
  (that have more than 260 characters.)
- Fixed a bug that OpenBSD was not able to get executable paths.
- Fixed a bug that empty strings were removed from arguments on Windows.
- Refactored codes to reduce potential bugs.

ver 0.6.4
- Added Universal CRT version for Windows 10 or later
- Fixed a bug that the execution button still says "processing" after getting errors.

ver 0.6.3
- Supported Unix-like systems (FreeBSD, Haiku, etc).
- Added URL validation for safety.
  (You can not open help URLs contain some special characters.)

ver 0.6.2
- Fixed typos.
- Fixed a bug that the menu can be empty on macOS.
- Added safe mode.

ver 0.6.1
- Added radio buttons to GUI components
- "placeholder" became the standard spelling for the placeholders option.
  ("empty_message" became the alternative one.)
- "combo" became the standard spelling for the combo boxes.
  ("choice" became the alternative one.)
- Fixed an error when opening URLs with debug builds.
- Fixed a crash when the executed process uses multiprocessing and each child process sends something to stdout.
- Fixed a bug that drag-drop events are ignored on newer versions of GTK.