@@ -1,0 +1,16 @@
+{
+    "gui": [
+        {
+            "label": "Affix example",
+            "command": "echo %-%",
+            "components": [
+                {
+                    "type": "text",
+                    "label": "Text box",
+                    "prefix": "-pre=",
+                    "suffix": " -suf"
+                }
+            ]
+        }
+    ]
+}
