@@ -1,0 +1,20 @@
+{
+    "gui": [
+        {
+            "label": "Optional component",
+            "command": "echo %-%",
+            "components": [
+                {
+                    "type": "text",
+                    "label": "Text box",
+                    "optional": true,
+                    "prefix": "-pre=",
+                    "suffix": " -suf",
+                    "validator": {
+                        "regex": ".+"
+                    }
+                }
+            ]
+        }
+    ]
+}
